# Glypto

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Glypto/: CMakeLists.txt
Glypto/src/GlyptoCore/: Application.cpp  Application.h  Core.h  EntryPoint.h  Event.h  EventObserver.h  EventSubject.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Platform.cpp  Platform.h
Glypto/src/GlyptoCore/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Glypto/src/GlyptoCore/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Testbed/: CMakeLists.txt
Testbed/src/: TestbedClient.cpp  main.cpp
